# DailyForge

./: .gitignore  README.md  index.html  package-lock.json  package.json
ai-service/: README.md
ai-service/app/: api_v2.py  main.py  rag.py
docs/: action-board.md  desktop-architecture.md  local-ai-rag-integration.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_learning_lab.sql
src-tauri/src/: learning.rs  learning_ai.rs  learning_local.rs  lib.rs  main.rs
src/app/: router.tsx  shell.tsx
src/components/: icons.tsx  ui.tsx
src/context/: app-context.tsx
src/data/: seed.ts
src/db/: client.ts  schema.ts
src/features/dashboard/: page.tsx
src/features/focus/: page.tsx
src/features/learning/: api.ts  page.tsx  session-page.tsx  types.ts
src/features/notes/: page.tsx
src/features/projects/: page.tsx
src/features/reviews/: page.tsx
src/features/settings/: page.tsx
src/features/tasks/: api.ts  context.tsx  page.tsx
src/lib/: core.ts  helpers.tsx
src/repositories/: focus.repository.ts  learning.repository.ts  note.repository.ts  project.repository.ts  review.repository.ts  settings.repository.ts  sqlite-helpers.ts  task.repository.ts  workspace.repository.ts
src/services/: focus.service.ts  learning.service.ts  note.service.ts  project.service.ts  review.service.ts  settings.service.ts  task.service.ts
